2016-02-25  Carl Hetherington  <cth@carlh.net>

	* Plot all video and subtitle content on single tracks
	with audio on the remainder.  Improve rendering quality
	of the timeline.

2016-02-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.25 released.

2016-02-24  Carl Hetherington  <cth@carlh.net>

	* Various fixes to timeline behaviour.

	* Fix download of certificates for CAT745 and CP850.

2016-02-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.24 released.

2016-02-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.23 released.

2016-02-21  Carl Hetherington  <cth@carlh.net>

	* Fix duplicate <LoadFont> nodes in subtitle files.

2016-02-18  c.hetherington  <cth@carlh.net>

	* Add some more information to the content properties
	dialogue (#791).

2016-02-17  Carl Hetherington  <cth@carlh.net>

	* Store cinema / screen certificates in a separate
	file and allow configuration of its location (#796).

2016-02-16  Carl Hetherington  <cth@carlh.net>

	* Add option to dcpomatic_cli to echo the
	created DCP's path to stdout (#794).

	* Add option to auto-upload to TMS (#794).

	* Version 2.6.22 released.

2016-02-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.21 released.

2016-02-15  Carl Hetherington  <cth@carlh.net>

	* Fix exception when analysing audio of projects with more
	than 8 DCP channels.

2016-02-15  c.hetherington  <cth@carlh.net>

	* Support SSA subtitles embedded within FFmpeg files.

2016-02-12  Carl Hetherington  <cth@carlh.net>

	* Add basic support for SSA (SubStation Alpha) subtitles (#128).

2016-02-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.20 released.

2016-02-09  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

2016-02-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.19 released.

2016-02-05  c.hetherington  <cth@carlh.net>

	* New cs_CZ translation from Tomáš Begeni.

2016-02-04  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.
