@@ -41,6 +41,7 @@ sources = """
           dcp_panel.cc
           email_dialog.cc
           image_sequence_dialog.cc
+          image_subtitle_colour_dialog.cc
           isdcf_metadata_dialog.cc
           dir_picker_ctrl.cc
           dolby_doremi_certificate_panel.cc
@@ -68,6 +69,7 @@ sources = """
           preset_colour_conversion_dialog.cc
           repeat_dialog.cc
           report_problem_dialog.cc
+          rgba_colour_picker.cc
           screen_dialog.cc
           screens_panel.cc
           self_dkdm_dialog.cc
